--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -74,11 +74,14 @@
         function callREST() {
             var xhttp = new XMLHttpRequest();
             xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    document.getElementById("response").innerHTML = this.responseText;
+                if (this.readyState == 4 && this.status == 200 && this.responseText == "Login success") {
+                    location.href = "http://localhost:8080/BuySell.html";
                 }
-            };
-            xhttp.open("GET", "http://localhost:8080/login?UserName="+document.getElementById("username").innerHTML + "&Password=" +document.getElementById("password").innerHTML", true, "username" , "password");
+                else {
+                 document.getElementById("response").innerHTML = this.responseText;
+                }
+            }; 
+            xhttp.open("GET", "http://localhost:8080/login?UserName="+ document.getElementById("username").value + "&Password=" +document.getElementById("password").value, true, "username" , "password");
             xhttp.setRequestHeader("Content-type", "application/json");
             xhttp.send();
             
