--- a/src/main/resources/static/BuySell.html
+++ b/src/main/resources/static/BuySell.html
@@ -38,13 +38,16 @@
                 	location.href = "http://localhost:8080/PurchaseFailed.html";
                 }
             }; 
-            if (document.getElementById("buysell").value == "buy" || document.getElementById("buysell").value == "Buy") {
+            if (document.getElementById("buysell").value == "buy" || document.getElementById("buysell").value == "Buy" && sessionStorage.clickcount > 0) {
             	xhttp.open("GET", "http://localhost:8080/buy?UserName=User1&Exchange="+ document.getElementById("exchange").value
              	+ "&Stock=" +document.getElementById("stock").value  + "&Quantity=" +document.getElementById("quantity").value, true);
              }
-             else {
+             else if ((document.getElementById("buysell").value == "sell" || document.getElementById("buysell").value == "Sell") && sessionStorage.clickcount > 0)  {
              	xhttp.open("GET", "http://localhost:8080/sell?UserName=User1&Exchange="+ document.getElementById("exchange").value
              	+ "&Stock=" +document.getElementById("stock").value  + "&Quantity=" +document.getElementById("quantity").value, true);
+             }
+             else {
+             	location.href = "http://localhost:8080/Unauthorized.html";
              }
             xhttp.send();
             
