--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -56,33 +56,23 @@
         </div>
     </div>
     <form>
-    		<h1>Please Sign In</h1>
-                    <div class="form-group">
-                        <input type="text" name="username" id="username" class="form-control input-lg"
-                               placeholder="UserName" required="true" autofocus="true"/>
-                    </div>
-                    <div class="form-group">
-                        <input type="password" name="password" id="password" class="form-control input-lg"
-                               placeholder="Password" required="true"/>
-                    </div>
-        Login to Buy/Sell:<br>
-         <button id="send" class="btn btn-default" type="submit" onclick="callREST()">Sign In </button>
+    		<h1>Buy/Sell stock ?</h1>
+         <button id="send" class="btn btn-default" type="submit" onclick="location.href = 'http://localhost:8080/BuySell.html';">Proceed </button>
     </form>
     <div id="response"></div>
 
     <script>
         function callREST() {
             var xhttp = new XMLHttpRequest();
-            sessionStorage.clickcount = 1;
             xhttp.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200 && this.responseText == "Login success") {
+                if (this.readyState == 4 && this.status == 200 ) {
                     location.href = "http://localhost:8080/BuySell.html";
                 }
                 else {
                  document.getElementById("response").innerHTML = this.responseText;
                 }
             }; 
-            xhttp.open("GET", "http://localhost:8080/login?UserName="+ document.getElementById("username").value + "&Password=" +document.getElementById("password").value, true, "username" , "password");
+            xhttp.open("GET", "http://localhost:8080/BuySell.html, true);
             xhttp.setRequestHeader("Content-type", "application/json");
             xhttp.send();
             
